# PromptSlut

./: .gitignore  CMakeLists.txt  ChronosEngine.cpp  ChronosEngine.h  ProjectWatcher.cpp  ProjectWatcher.h  README.md  Tool.h  build_env.bat  buildtips.md  convert.h  gemgem.md  get_deps.bat  get_voice_dependencies.py  http_client.cpp  http_client.h  keyfile.h  logger.cpp  logger.h  main.cpp  qt_ui.cpp  qt_ui.h  resources.rc  system_prompt.txt  tool_router.cpp  tool_router.h  tools.cpp  tools.h  voice_engine.cpp  voice_engine.h  voice_server.json  voice_server.py  worker.cpp  worker.h
Promptslutette/LlamaServerApp/: local.properties  settings.gradle
Promptslutette/LlamaServerApp/app/: build.gradle
Promptslutette/LlamaServerApp/app/src/main/: AndroidManifest.xml
Promptslutette/LlamaServerApp/app/src/main/java/com/llama/serverapp/: LlamaServerService.java  MainActivity.java  PromptslutetteService.kt
Promptslutette/LlamaServerApp/app/src/main/res/layout/: activity_main.xml
Promptslutette/LlamaServerApp/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
models/: hey_qwen.onnx
